<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="apkupdate_download">downloading, please wait a moment</string>
    <string name="apkupdate_download_fail">download fail</string>
    <string name="apkupdate_download_success">download completed, installing</string>
    <string name="apkupdate_new_version">new version v</string>
    <string name="app_name">video virtual camera</string>
    <string name="app_version">null</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="button_active">active</string>
    <string name="camerar2_basic_picture">picture</string>
    <string name="cdkey_invalid">the cdkey expired or not activated</string>
    <string name="check_selinux">run setenforce fail, this phone may not support!</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="copyright">"V%s
 all copyright reserved"</string>
    <string name="define_zxingandroidembedded" />
    <string name="deviceid">device id:</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_invalid_mp4_format">invalid mp4 file, please convert format to h264.</string>
    <string name="error_no_legal_rtmp_url">invalid rtmp url</string>
    <string name="error_no_mp4_find">%s file no exist,please check</string>
    <string name="error_no_replace_camera">camera connect fail, please restart app</string>
    <string name="error_no_start_player">start player fail, please restart app and try again</string>
    <string name="error_should_retry">please retry</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="float_btn_tip_close">do you want close floating window ?</string>
    <string name="float_btn_tip_hflip">The first click of this button will flip the video horizontally and the second click will restore it. Do you want to continue?</string>
    <string name="float_btn_tip_play">do you want to play now? only if the screen is stuck need to do this.</string>
    <string name="float_btn_tip_rotate">The first time this button is clicked, it will rotate 90° counterclockwise, the second time it will rotate 90° clockwise, and the third time it will be restored. Do you want to continue?</string>
    <string name="float_btn_tip_six_key">do you want to play /sdcard/Movies/%s?</string>
    <string name="float_btn_tip_stop">do you want to force stop play now? This will make the screen stuck if you are playing now.</string>
    <string name="float_btn_tip_swapjpg">This function is only used when the screen rotates when taking pictures.</string>
    <string name="float_btn_tip_switch_camera">switch between replacement camera and original camera</string>
    <string name="float_btn_tip_title">Attention</string>
    <string name="float_btn_tip_vflip">The first click of this button will flip the video vertically and the second click will restore it. Do you want to continue?</string>
    <string name="float_edit_tips">input rtmp url</string>
    <string name="float_edit_title">rtmp stream</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon">icon</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="init_android_version_mismatch">only support Android %d!</string>
    <string name="init_camera_version_mismatch">the camera mismatch</string>
    <string name="input_cdkey">please input cdkey</string>
    <string name="library_zxingandroidembedded_author">JourneyApps</string>
    <string name="library_zxingandroidembedded_authorWebsite">https://journeyapps.com/</string>
    <string name="library_zxingandroidembedded_isOpenSource">true</string>
    <string name="library_zxingandroidembedded_libraryDescription">Barcode scanning library for Android, using ZXing for decoding.</string>
    <string name="library_zxingandroidembedded_libraryName">ZXing Android Embedded</string>
    <string name="library_zxingandroidembedded_libraryVersion" />
    <string name="library_zxingandroidembedded_libraryWebsite">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="library_zxingandroidembedded_licenseId">apache_2_0</string>
    <string name="library_zxingandroidembedded_repositoryLink">https://github.com/journeyapps/zxing-android-embedded</string>
    <string name="messages_header">Messages</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="mtrl_slider_range_content_description">%1$s to %2$s</string>
    <string name="net_error_retry">retry</string>
    <string name="net_error_title">connect to server error</string>
    <string name="net_test_loading">connecting to server</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="permission_float">please grant floating window permission!</string>
    <string name="permission_sd_error">Please grante write storage permission</string>
    <string name="preview_camera">preview</string>
    <string name="replace_camera">replace</string>
    <string name="replace_camera_fail">replace camera failed:</string>
    <string name="replace_camera_loading_begin">replacing camera, please wait a moment</string>
    <string name="replace_camera_success">replace camera success</string>
    <string name="reply_title">Default reply action</string>
    <string name="reset_camera">reset</string>
    <string name="reset_camera_success">reset camera success</string>
    <string name="screen_flip">flip</string>
    <string name="screen_height_padding">height padding</string>
    <string name="screen_rotate">rotate</string>
    <string name="setting_active_success">active success</string>
    <string name="setting_choose_mp4">please choose a mp4 file</string>
    <string name="setting_error_cdkey">the cdkey is invalid or expired</string>
    <string name="setting_expired_time">expire at:%s</string>
    <string name="setting_flip_horizontal">horizontal</string>
    <string name="setting_flip_vertical">vertical</string>
    <string name="setting_inactivated">inactivated</string>
    <string name="setting_invalid_cdkey">invalid cdkey</string>
    <string name="setting_player_running">player is running</string>
    <string name="setting_player_stop">player is not running</string>
    <string name="setting_replace_fail">camera not replace</string>
    <string name="setting_replace_success">success replace camera</string>
    <string name="setting_rotate_clockwise_90">Rotate 90 degrees clockwise</string>
    <string name="setting_rotate_counterclockwise_90">Rotate 90 degrees counterclockwise</string>
    <string name="setting_textview_step_1">1.replace camera</string>
    <string name="setting_textview_step_2">2.play video</string>
    <string name="setting_textview_step_3">3.preview</string>
    <string name="setting_textview_usage_head"><b>Steps usage</b>" "</string>
    <string name="setting_unroot">The phone is not rooted, not supported yet</string>
    <string name="signature_title">Your signature</string>
    <string name="splash_dialog_message">Please enter su path</string>
    <string name="splash_dialog_title">Unable to obtain root privileges</string>
    <string name="start_player">"▶️
play"</string>
    <string name="stop_player">"⏹️
stop"</string>
    <string name="stop_preview_camera">stop</string>
    <string name="switch_float">floating window:</string>
    <string name="switch_su">enable root:</string>
    <string name="sync_header">Sync</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="tab_camera">preview</string>
    <string name="tab_camera2">api2</string>
    <string name="tab_index">home</string>
    <string name="tab_settings">settings</string>
    <string name="video_come_from">" "<b>To use the rtmp function, please open the floating window and click</b>" 🎞️
 The video files listed below are from the sd card DCIM and Movies directory "</string>
    <string name="video_size">video resize</string>
    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_button_ok">OK</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="activate_success">Activation successful</string>
    <string name="activate_fail">Activation failed</string>
</resources>
